Thu Jan 11 15:27:27 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * docs/ACE-guidelines.html:
          Fixed formatting.

Wed Jan 10 20:31:52 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * docs/ACE-guidelines.html:
          Added some text making explicit the use of "#if defined (FOO)"
          rather than "#if FOO" so as to avoid trouble with Doxygen.

Wed Jan 10 16:08:32 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * tests/CDR_Array_Test.cpp:

          Added a work-around for an issue with gcc 4.1.1 (and possibly
          later versions) where certain variables are optimized away while
          they are still needed.

Wed Jan 10 15:19:02 UTC 2007  Steve Huston  <shuston@riverace.com>

        * NEWS: Noted that Windows 95, 98, Me, etc. prior to NT4 SP2 are
          no longer supported. The code for this is described at
          Sat Jan  6 00:06:52 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ACE-INSTALL.html: Corrected Pharlap references.

Wed Jan 10 14:16:04 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/svn/config:
        * docs/svn/svn-prefs.reg:
          Added .vxe to global ignore list

Wed Jan 10 11:40:04 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Don't run 1482 with VxWorks RTP

Wed Jan 10 07:55:04 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        Reverted my change below. It worked in terms that it compiled on
        all platforms but it resulted in a big footprint increase (about 1.5%)
        for a full application and that is just too much.

        Tue Jan  9 11:21:30 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
        * ace/String_Base.cpp:
        * ace/String_Base.h:
          Moved the members of String_Base_Const to String_Base and
          removed String_Base_Const

        * ace/String_Base_Const.cpp:
        * ace/String_Base_Const.h: