@@ -395,7 +395,7 @@ public:
 
   /// Normalizes data in the top-level <Message_Block> to align with the base,
   /// i.e., it "shifts" the data pointed to by <rd_ptr> down to the <base> and
-  /// then readjusts <rt_ptr> to point to <base> and <wr_ptr> to point
+  /// then readjusts <rd_ptr> to point to <base> and <wr_ptr> to point
   /// to <base> + the length of the moved data.  Returns -1 and does
   /// nothing if the <rd_ptr> is > <wr_ptr>, else 0 on success.
   int crunch (void);
