@@ -1,3 +1,9 @@
+Thu Jan 11 21:42:47 UTC 2007  Steve Huston  <shuston@riverace.com>
+
+        * ace/Message_Block.h: Comment typos.
+        * ace/SOCK_Stream.h: Corrected documentation for what the
+          _n() variants do with timeouts.
+
 Thu Jan 11 15:27:27 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>
 
         * docs/ACE-guidelines.html:
